Make highlighting backgrounds line invisible for mouse, to avoid overlapping with other UI elements (like insert middle level button)

--- a/packages/core/src/components/Grid/GridRowBackground.module.css
+++ b/packages/core/src/components/Grid/GridRowBackground.module.css
@@ -119,6 +119,8 @@
 .highlitingLine {
   --hightlighting-bg: ;
 
+  pointer-events: none;
+
   position: absolute;
   inset-block-end: 0;
   inset-inline-start: 50%;
